# 2gis-test-app

./: CMakeLists.txt  LICENSE  README.md  main.cpp
impl/: dataprovider.cpp  dataprovider.h
impl/checksumdataconsumer/: checksumdataconsumer.cpp  checksumdataconsumer.h
impl/counterdataconsumer/: counterdataconsumer.cpp  counterdataconsumer.h
impl/filedataprovider/: filedataprovider.cpp  filedataprovider.h
interfaces/: idataconsumer.h  idataprovider.h
